sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value getNombresValeurs
  for (i<-1 to getNombresValeurs()-1){
               ^AlgInsertionSort:6: error: not found: value j
    j=i
    ^AlgInsertionSort:7: error: not found: value j
    while(j>0&&!plusPetitQue(j-1,v)){
          ^AlgInsertionSort:7: error: not found: value j
    while(j>0&&!plusPetitQue(j-1,v)){
                             ^AlgInsertionSort:8: error: not found: value j
        copie(j-1,j)
              ^AlgInsertionSort:8: error: not found: value j
        copie(j-1,j)
                  ^AlgInsertionSort:9: error: not found: value j
        j=j-1
        ^AlgInsertionSort:11: error: not found: value j
    setValeur(j,v)
              ^